style.css
/* ... */
.section-video .video {
	width: 100%;
	max-width: 2000px;
	margin: 0 auto;
}
.section-video-overlay {
	position: absolute;
	left: 0;
	top: 0;
	color: #fff;
	width: 100%;
	padding-top: 90px;
	padding-left: 30px;
	padding-right: 30px;
	z-index: 1;
}
.section-video-overlay h1 {
	font-size: 40px;
	font-weight: bold;
	margin-bottom: 20px;
}
.section-video-overlay p {
	font-size: 20px;
	margin-bottom: 20px;
}

/*  */
.btn-open-video {
	position: absolute; 
	top: 5px; 
	right: 5px;
	z-index: 2;
}

.section-press {
	margin-top: -300px;
	background: #fff;
	position: relative;
}
.section-hero {
	background: #222;
	color: #ffffff;
}
.section-hero .container {
	text-align: center;
}
.section-hero h1 {
	padding-top: 50px;
	margin-top: 0;
	margin-bottom: 36px;
	line-height: 1.2;
	font-size: 20px;
	font-weight: bold;
}
.section-press h3 {
	color: teal;
}
.section-hero p {
	margin-top: 0;
	margin-bottom: 0;
}
.section-hero .btn {
	font-size: 18px;
	margin: 22px 0 27px 0;
}
.section-hero .demo-theme{
	height: 64px;
	background: url(images/halfling-mobile.jpg) no-repeat center top;
	background-size: cover;
}

/* Section page title */
.section-page-title {
	background: #001968;
	padding: 35px 0;
}
.section-page-title h1 {
	text-align: left;
	color: #ffffff;
	margin: 0;
}

.section-apps {
	background: #adccd2;
}
.section-apps .btn {
	color:#115195; 
	font-size: 17px; 
	font-weight: 300;
	line-height: 1;
}
.error404 .site-main {
	height: 400px;
}

/* Features */
.features {
	list-style: none;
	margin: 0;
	padding: 0;
}
.features .item {
	margin-bottom: 70px;
}
.features h2 {
	font-size: 20px;
	font-weight: bold;
	color: #222222;
	margin-top: 56px;
	margin-bottom: 35px;
}
.features h3 {
	font-size: 17px;
	font-weight: normal;
}
.features .call-to-action {
	text-align: center;
	font-size: 18px;
	margin: 30px 0 35px 0;
}
.features .thumbnail {
	text-align: center;
}

/* Buttons */
.btn {
	font-size: 1.6rem;
}
.btn-full-width {
	display: inline-block;
	width: 100%;
}
.btn-primary {
	background-color: #115296;
	border-color: #093b6f;
}

/* Post meta */
.post-meta a {
	color: #777777;
}
.post-meta > * {
	color: #777777;
	margin-right: 22px;
}
.post-meta a:hover {
	color:#007aac;
}

/* Sidebar */
.sidebar {
	margin-top: 30px;
}

.section-subfooter {
	background: #001968;
	color: #dddddd;
}

/* Footer */
.footer {
	background: #001968;
	color: #dddddd;
	padding-top: 25px;
	padding-bottom: 30px;
}
.footer .container {
	background: url('images/govph-seal-mono-footer.png') no-repeat 20px bottom;
}
.footer .credits {
	margin: 25px 0;
}
.footer p {
	margin: 0;
}
.footer a {
	color: #dddddd;
}
.footer a:focus {
	outline: #7FBA00;
}
.footer a:hover {
	text-decoration: underline;
}

/* Nav footer */
.nav-footer {
	margin: 25px 0;
}
.nav-footer ul {
	list-style: none;
	margin: 0;
	padding: 0;
}
.nav-footer li {
	display: inline-block;
}
.nav-footer li:after {
	content: "|";
	margin: 0 2px;
}
.nav-footer li:last-child:after {
	content: "";
	margin: 0;
}

/* WordPress core styles */
.sticky .entry-title{
	font-style: italic;
}

/* Vue */
[v-cloak] {
    position: relative;
}
[v-cloak] > * {
    visibility: hidden;
}
[v-cloak]:before {
    content:"";
    background: url("images/ajax-loader.gif") no-repeat top center;
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
}
div[data-pending="true"]:before {
    background: #fff;
    opacity: 0.9;
    content: "";
    position: fixed;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    z-index: 1001;
}
div[data-pending="true"]:after {
    content: "Processing... Please wait...";
    position: fixed;
    left: 0;
    right: 0;
    top: 50%;
    z-index: 1002;
    text-align: center;
    color: #222;
    font-size: 18px;
    font-style: italic;
} 

.custom-checkbox {
	display: inline-block; 
	overflow:hidden;
	position: relative;
}

.custom-checkbox input {
	left: 50%; 
	top: 50%; 
	position: absolute; 
	z-index: -1
}
.custom-checkbox label {
	cursor: pointer; 
	padding: 5px 15px; 
	z-index: 1; 
	position: relative; 
	left: 0; 
	top: 0; 
	width: 100%; 
	border: 2px solid #ccc; 
	border-radius: 20px;
	background: white;
	color: rgb(171, 171, 171);
}
.custom-checkbox[data-checked="true"] label {
	border-color: #2496ed;
	color: #2496ed;
}

.widget {
	margin-bottom: 30px;
}

.alignnone {
	margin: 5px 20px 20px 0;
}

.aligncenter,
div.aligncenter {
	display: block;
	margin: 5px auto 5px auto;
}

.alignright {
	float:right;
	margin: 5px 0 20px 20px;
}

.alignleft {
	float: left;
	margin: 5px 20px 20px 0;
}

.aligncenter {
	display: block;
	margin: 5px auto 5px auto;
}

a img.alignright {
	float: right;
	margin: 5px 0 20px 20px;
}

a img.alignnone {
	margin: 5px 20px 20px 0;
}

a img.alignleft {
	float: left;
	margin: 5px 20px 20px 0;
}

a img.aligncenter {
	display: block;
	margin-left: auto;
	margin-right: auto
}

.wp-caption {
	background: #fff;
	border: 1px solid #f0f0f0;
	max-width: 96%; /* Image does not overflow the content area */
	padding: 5px 3px 5px;
	text-align: center;
	margin-bottom: 40px;
}

.wp-caption.alignnone {
	margin: 5px 20px 20px 0;
}

.wp-caption.alignleft {
	margin: 5px 20px 20px 0;
}

.wp-caption.alignright {
	margin: 5px 0 20px 20px;
}

.wp-caption img {
	border: 0 none;
	height: auto;
	margin: 0;
	max-width: 98.5%;
	padding: 0;
	width: auto;
}

.wp-caption p.wp-caption-text {
	font-size: 12px;
	font-size: 1.2rem;
	line-height: 2.167;
	margin: 0;
	padding: 0 5px;
}

/* WordPress comment */
.entry-comments {
	padding-top: 20px;
	margin-top: 30px;
	border-top: 5px solid #E5E5E5;
}
.comments-title {
	margin: 0;
}
.comment-list,
.comment-list .children{
	list-style: none inside;
	padding: 0;
}
.comment-list .children {
	padding-left: 40px;
}
.comment-list .comment{
	margin-bottom: 25px;
}
.comment-meta .avatar{
	float: left;
	margin: 0 10px 10px 0;
	-webkit-border-radius: 22px;
	border-radius:  22px;
}
.comment-meta cite{
	font-size: 24px;
	margin: 0 10px 0 0;
}
/* ... */

